NetBSD Problem Report #40004

From bouyer@antioche.lip6.fr  Sat Nov 22 14:02:46 2008
Return-Path: <bouyer@antioche.lip6.fr>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 49B0463B11D
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 22 Nov 2008 14:02:46 +0000 (UTC)
Message-Id: <200811221402.mAME2ecb020348@antioche.lip6.fr>
Date: Sat, 22 Nov 2008 15:02:40 +0100 (MET)
From: bouyer@antioche.lip6.fr
Reply-To: bouyer@antioche.lip6.fr
To: gnats-bugs@gnats.NetBSD.org
Subject: ps core dumps when working on kernel core dump
X-Send-Pr-Version: 3.95

>Number:         40004
>Category:       kern
>Synopsis:       ps core dumps when working on kernel core dump
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Nov 22 14:05:00 +0000 2008
>Closed-Date:    Sat Nov 29 21:18:26 +0000 2008
>Last-Modified:  Sat Nov 29 21:18:26 +0000 2008
>Originator:     Manuel Bouyer
>Release:        NetBSD 5.0_BETA
>Organization:
>Environment:
System: NetBSD antioche.lip6.fr 5.0_BETA NetBSD 5.0_BETA (ANTIOCHE5) #2: Thu Nov 20 23:55:28 CET 2008 bouyer@roll:/dsk/l1/misc/bouyer/tmp/i386/obj/dsk/l1/misc/bouyer/netbsd-5/src/sys/arch/i386/compile/ANTIOCHE5 i386
Architecture: i386
Machine: i386
>Description:
	ps cores dump when working on a kernel core dump:
antioche:/var/crash#ps -N netbsd.10 -M netbsd.10.core -axu
Segmentation fault (core dumped)
Core was generated by `ps'.
Program terminated with signal 11, Segmentation fault.
#0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
(gdb) where
#0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
#1  0x0804c596 in main ()

>How-To-Repeat:
	make kernel crash and dump core
	reboot
	try to read process states from core dump
>Fix:


>Release-Note:

>Audit-Trail:
From: David Holland <dholland-bugs@netbsd.org>
To: bouyer@antioche.lip6.fr
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org, gnats-bugs@netbsd.org
Subject: Re: kern/40004: ps core dumps when working on kernel core dump
Date: Fri, 28 Nov 2008 00:45:07 +0000

 On Sat, Nov 22, 2008 at 02:05:00PM +0000, bouyer@antioche.lip6.fr wrote:
  > 	ps cores dump when working on a kernel core dump:
  > antioche:/var/crash#ps -N netbsd.10 -M netbsd.10.core -axu
  > Segmentation fault (core dumped)
  > Core was generated by `ps'.
  > Program terminated with signal 11, Segmentation fault.
  > #0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
  > (gdb) where
  > #0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
  > #1  0x0804c596 in main ()

 Is that a normal kernel core or one of the new lightweight dumps?

 -- 
 David A. Holland
 dholland@netbsd.org

From: Manuel Bouyer <bouyer@antioche.eu.org>
To: David Holland <dholland-bugs@netbsd.org>
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org,
        gnats-bugs@netbsd.org
Subject: Re: kern/40004: ps core dumps when working on kernel core dump
Date: Fri, 28 Nov 2008 09:43:48 +0100

 On Fri, Nov 28, 2008 at 12:45:07AM +0000, David Holland wrote:
 > On Sat, Nov 22, 2008 at 02:05:00PM +0000, bouyer@antioche.lip6.fr wrote:
 >  > 	ps cores dump when working on a kernel core dump:
 >  > antioche:/var/crash#ps -N netbsd.10 -M netbsd.10.core -axu
 >  > Segmentation fault (core dumped)
 >  > Core was generated by `ps'.
 >  > Program terminated with signal 11, Segmentation fault.
 >  > #0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
 >  > (gdb) where
 >  > #0  0xbbbcb46a in kvm_getproc2 () from /lib/libkvm.so.5
 >  > #1  0x0804c596 in main ()
 > 
 > Is that a normal kernel core or one of the new lightweight dumps?

 A lightweight one (this is what the kernel produced by default, I didn't
 configure anything special for this)

 -- 
 Manuel Bouyer, LIP6, Universite Paris VI.           Manuel.Bouyer@lip6.fr
      NetBSD: 26 ans d'experience feront toujours la difference
 --

From: Christoph Egger <cegger@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40004 CVS commit: src/lib/libkvm
Date: Sat, 29 Nov 2008 18:24:58 +0000 (UTC)

 Module Name:	src
 Committed By:	cegger
 Date:		Sat Nov 29 18:24:58 UTC 2008

 Modified Files:
 	src/lib/libkvm: kvm_proc.c

 Log Message:
 check error case for kvm_getlwps or SIGSEGV occurs due to dereferecing a NULL pointer.
 return NULL if there are no threads or proceed further through all loops.
 Fixes PR 40004. Ok rmind@


 To generate a diff of this commit:
 cvs rdiff -r1.78 -r1.79 src/lib/libkvm/kvm_proc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Sat, 29 Nov 2008 18:27:20 +0000
State-Changed-Why:
Fix committed and pullup to netbsd-5 has been requested (ticket #146)


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40004 CVS commit: [netbsd-5] src/lib/libkvm
Date: Sat, 29 Nov 2008 21:00:00 +0000 (UTC)

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Nov 29 21:00:00 UTC 2008

 Modified Files:
 	src/lib/libkvm [netbsd-5]: kvm_proc.c

 Log Message:
 Pull up following revision(s) (requested by cegger in ticket #146):
 	lib/libkvm/kvm_proc.c: revision 1.79
 check error case for kvm_getlwps or SIGSEGV occurs due to dereferecing a
 NULL pointer.
 return NULL if there are no threads or proceed further through all loops.
 Fixes PR 40004. Ok rmind@


 To generate a diff of this commit:
 cvs rdiff -r1.78 -r1.78.6.1 src/lib/libkvm/kvm_proc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Sat, 29 Nov 2008 21:18:26 +0000
State-Changed-Why:
pullup ticket has been handled


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.