check error case for kvm_getlwps or SIGSEGV occurs due to dereferecing a NULL pointer. return NULL if there are no threads or proceed further through all loops. Fixes PR 40004. Ok rmind@